made mobile alignment changes

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>NgApp</title>
+    <title>Weather Forecast</title>
     <base href="/" />
     <link
       rel="preload"
       href="https://images.pexels.com/photos/695657/pexels-photo-695657.jpeg"
       as="image"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
